# minishell

./: .gitignore  CMakeLists.txt  Makefile
inc/: minishell.h
include/: minishell.h  minishell_struct.h
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atoi_only_for_num.c  ft_strdup.c  ft_strjoin_con.c  ft_strjoin_free.c  get_next_line.c  libft.h
src/: main.c
srcs/: arguments_processing.c  dollar_processing.c  env_utils.c  main.c  parse_utils.c  parser.c  parsing.c  pass_whitespaces.c  postparser.c  printer.c  shlvl_change.c  utils.c  validate_redirect.c  validator.c
srcs/builtins/: cd.c  cd_utils.c  echo.c  env.c  exit.c  export.c  export_utils.c  pwd.c  unset.c
srcs/execution/: builtins.c  execute_cmds.c  heredoc.c  path_processing.c  pipex.c
srcs/parser/: arguments_processing.c  arguments_utils.c  commands_list_create.c  commands_processing.c  copying_envp.c  dollar_processing.c  parse_utils.c  parser.c  postparser.c  quote_processing.c  redirect_processing.c  set_redirect.c  validate_redirect.c  validator.c
srcs/signals/: sig_int_shell.c  sig_non_int_shell.c
srcs/utils/: arguments_utils.c  commands_utils.c  env_utils.c  execute_utils.c  memory_processing.c  printer.c  shlvl_change.c  utils.c
